--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.3",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.5",
+    "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
     "sequelize": "^6.19.0"
