--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "install": "cd client && npm install"
   },
   "keywords": [],
   "author": "",
