--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "cd client && npm run build",
-    "install": "cd client && npm install"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
