--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "training",
+  "name": "coffee-shop-",
   "version": "1.0.0",
-  "description": "",
+  "description": "Copyright (c) \r Permission is hereby granted, free of charge, to any person obtaining a copy\r of this software and associated documentation files (the \"Software\"), to deal\r in the Software without restriction, including without limitation the rights\r to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\r copies of the Software, and to permit persons to whom the Software is\r furnished to do so, subject to the following conditions:",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jmaouchi/Coffee-Shop-.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Jmaouchi/Coffee-Shop-/issues"
+  },
+  "homepage": "https://github.com/Jmaouchi/Coffee-Shop-#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.3",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.5",
-    "express-session": "^1.17.2",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
-    "sequelize": "^6.19.0"
+    "sequelize": "^6.20.0"
   },
   "devDependencies": {
-    "eslint": "^8.15.0",
+    "eslint": "^8.16.0",
     "nodemon": "^2.0.16"
   }
 }
